--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Custom Booking Page</title>
+  <!-- Google Font: Poppins -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <!-- External CSS -->
   <link rel="stylesheet" href="styles.css">
+  <!-- Canvas Confetti Library -->
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 </head>
 <body>
-  <!-- Your HTML markup here (categories, service cards, modal, etc.) -->
+  <!-- Your HTML markup goes here. For example, category tabs, service cards, and modal structure -->
   
+  <!-- External JavaScript -->
   <script src="scripts.js"></script>
 </body>
 </html>
